--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ button {
 @media (max-width:790px) {
     .login {
         width: 100%;
-        height: 60%;
+        height: 60vh;
         padding: 0px 50px;
         background-color: white;
         border-top-left-radius: 0px;
@@ -125,7 +125,7 @@ button {
         margin: 0px;
     }
     .bg {
-        height: 40%;
+        height: 40vh;
         width: 100%;
         border-top-right-radius: 0px;
         border-bottom-right-radius: 0px;
@@ -134,6 +134,6 @@ button {
         display: flex;
     }
     #l-btn {
-        margin-top: 10px;
+        margin-top: 20px;
     }
 }
